--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <script src="src/js/ui/notifications.js"></script>
 <script src="src/js/ui/forms.js"></script>
 <script src="src/js/ui/form-builders.js"></script>
+<script src="src/js/ui/tables.js"></script>
+<script src="src/js/ui/search.js"></script>
+<script src="src/js/ui/pagination.js"></script>
+<script src="src/js/ui/filters.js"></script>
 
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
