--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <script src="src/js/ui/search.js"></script>
 <script src="src/js/ui/pagination.js"></script>
 <script src="src/js/ui/filters.js"></script>
+<script src="src/js/ui/actions.js"></script>
+<script src="src/js/ui/shortcuts.js"></script>
+<script src="src/js/ui/context-menu.js"></script>
 
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
