--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 <script src="src/js/ui/shortcuts.js"></script>
 <script src="src/js/ui/context-menu.js"></script>
 
+<!-- Inventory Module -->
+<script src="src/js/modules/inventory/products.js"></script>
+<script src="src/js/modules/inventory/stock-levels.js"></script>
+<script src="src/js/modules/inventory/categories.js"></script>
+<script src="src/js/modules/inventory/product-ui.js"></script>
+<script src="src/js/modules/inventory/product-actions.js"></script>
+
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
   // CDN-backed loader (only used if local files are missing)
