--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
 <!-- Sales Module -->
 <script src="src/js/modules/sales/line-items.js"></script>
 <script src="src/js/modules/sales/orders.js"></script>
+<script src="src/js/modules/sales/invoices.js"></script>
 <script src="src/js/modules/sales/order-ui.js"></script>
 <script src="src/js/modules/sales/order-actions.js"></script>
+<script src="src/js/modules/sales/invoice-ui.js"></script>
+
+<!-- Printing Module -->
+<script src="src/js/printing/invoice-builder.js"></script>
+<script src="src/js/printing/receipt-builder.js"></script>
 
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
