--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 <script src="src/js/modules/rentals/rental-ui.js"></script>
 <script src="src/js/modules/rentals/rental-actions.js"></script>
 
+<!-- Subscriptions Module -->
+<script src="src/js/modules/subscriptions/subscriptions.js"></script>
+<script src="src/js/modules/subscriptions/subscription-ui.js"></script>
+<script src="src/js/modules/subscriptions/subscription-actions.js"></script>
+
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
   // CDN-backed loader (only used if local files are missing)
