--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 <script type="module" src="src/js/modules/shipments/shipment-actions.js"></script>
 <script type="module" src="src/js/printing/label-builder.js"></script>
 
+<!-- Kits Module -->
+<script src="src/js/modules/kits/kits.js"></script>
+<script type="module" src="src/js/modules/kits/kit-ui.js"></script>
+<script type="module" src="src/js/modules/kits/kit-actions.js"></script>
+
 <!-- XLSX (SheetJS) loader: CDN fallback used only if local files aren't found -->
 <script>
   // CDN-backed loader (only used if local files are missing)
